--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
       <version>4.13.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.16.1</version>
+    </dependency>
   </dependencies>
 
   <build>
